syntax = 'proto3';


message Port {
    uint64 portGuid = 1;
    bytes portNum = 2;
    uint64 parentNodeGuid = 3;
    uint32 healthy = 4;
    uint64 neighPortGuid = 5;
    bytes neighPortNum = 6;
    uint64 mKey = 7;
    uint64 subnetPrefix = 8;
    uint32 baseLid = 9;
    uint32 masterSmLid = 10;
    bytes linkWidthEnabled = 11;
    bytes linkWidthSupported = 12;
    bytes linkWidthActive = 13;
    bytes linkSpeedEnabled = 14;
    bytes linkSpeedSupported = 15;
    bytes linkSpeedActive = 16;
    bytes physState = 17;
    bytes logicalState = 18;
    bytes vlCap = 19;
    bytes vlHighLimit = 20;
    bytes vlArbHighCap = 21;
    bytes vlArbLowCap = 22;
    bytes mtuCap = 23;
    uint32 portFabricState = 24;
    bytes isSmPort = 25;
}

message Node {
    uint64 nodeGUID = 1;
    repeated Port ports = 2;
}


message StoreMessage {
    uint64 timestamp = 1;
    repeated Port ports = 2;
    repeated Node nodes = 3;

}